--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-
 pandas = "==1.0.4"
 streamlit = "==0.60.0"
+textblob = "*"
 
 [requires]
 python_version = "3.6"
