--- a/Pipfile
+++ b/Pipfile
@@ -47,9 +47,9 @@ pandas = "==1.0.4"
 pandocfilters = "==1.4.2"
 parso = "==0.7.0"
 pathtools = "==0.1.2"
+pdftotext = "==2.1.4"
 pexpect = "==4.8.0"
 pickleshare = "==0.7.5"
-playsound = "==1.2.2"
 prometheus-client = "==0.8.0"
 prompt-toolkit = "==3.0.5"
 protobuf = "==3.12.2"
@@ -79,7 +79,7 @@ tzlocal = "==2.1"
 urllib3 = "==1.25.9"
 validators = "==0.15.0"
 watchdog = "==0.10.2"
-wcwidth = "==0.1.9"
+wcwidth = "==0.2.0"
 webencodings = "==0.5.1"
 widgetsnbextension = "==3.5.1"
 zipp = "==3.1.0"
@@ -89,11 +89,9 @@ ipython_genutils = "==0.2.0"
 Jinja2 = "==2.11.2"
 MarkupSafe = "==1.1.1"
 Pillow = "==7.1.2"
-PyAudio = "==0.2.11"
 Pygments = "==2.6.1"
 PyYAML = "==5.3.1"
 Send2Trash = "==1.5.0"
-SpeechRecognition = "==3.8.1"
 
 [requires]
 python_version = "3.6"
