--- a/Pipfile
+++ b/Pipfile
@@ -6,13 +6,46 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+altair = "==4.1.0"
+astor = "==0.8.1"
+attrs = "==19.3.0"
+backcall = "==0.1.0"
+base58 = "==2.0.0"
+beautifulsoup4 = "==4.9.1"
+bleach = "==3.1.5"
+blinker = "==1.4"
 bokeh = "==2.0.2"
+boto3 = "==1.13.19"
+botocore = "==1.16.19"
+cachetools = "==4.1.0"
+certifi = "==2020.4.5.1"
+chardet = "==3.0.4"
+click = "==7.1.2"
+decorator = "==4.4.2"
+defusedxml = "==0.6.0"
+docutils = "==0.15.2"
+entrypoints = "==0.3"
+enum-compat = "==0.0.3"
+idna = "==2.9"
+importlib-metadata = "==1.6.0"
+ipykernel = "==5.3.0"
+ipython = "==7.15.0"
+ipywidgets = "==7.5.1"
+jedi = "==0.17.0"
+jmespath = "==0.10.0"
+joblib = "==0.15.1"
+jsonschema = "==3.2.0"
+jupyter-client = "==6.1.3"
+jupyter-core = "==4.6.3"
+mistune = "==0.8.4"
+nbconvert = "==5.6.1"
+nbformat = "==5.0.6"
+nltk = "==3.5"
+notebook = "==6.0.3"
+numpy = "==1.18.4"
 pandas = "==1.0.4"
 pandocfilters = "==1.4.2"
 parso = "==0.7.0"
-pathtools = "==0.1.2"
-pdftotext = "*"
-pexpect = "==4.8.0"
 pickleshare = "==0.7.5"
 prometheus-client = "==0.8.0"
 prompt-toolkit = "==3.0.5"
