--- a/Pipfile
+++ b/Pipfile
@@ -89,7 +89,7 @@ Pillow = "==7.1.2"
 Pygments = "==2.6.1"
 PyYAML = "==5.3.1"
 Send2Trash = "==1.5.0"
-pypdf2 = "*"
+pdftotext = "*"
 
 [requires]
 python_version = "3.6"
