--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==4.1.0
 argcomplete==1.10.0
+asgiref==3.2.7
 astor==0.8.1
 attrs==19.3.0
 backcall==0.1.0
@@ -9,8 +10,8 @@ bleach==3.1.5
 blinker==1.4
 blis==0.4.1
 bokeh==2.0.2
-boto3==1.13.19
-botocore==1.16.19
+boto3==1.13.22
+botocore==1.16.22
 cachetools==4.1.0
 catalogue==1.0.0
 certifi==2020.4.5.1
@@ -19,15 +20,18 @@ click==7.1.2
 cymem==2.0.3
 decorator==4.4.2
 defusedxml==0.6.0
+Django==3.0.7
 docutils==0.15.2
 docx2txt==0.8
 EbookLib==0.17.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 entrypoints==0.3
 enum-compat==0.0.3
 extract-msg==0.23.1
 gTTS==2.1.1
 gTTS-token==1.1.3
 idna==2.9
+image==1.5.32
 IMAPClient==2.1.0
 importlib-metadata==1.6.0
 ipykernel==5.3.0
@@ -67,6 +71,7 @@ preshed==3.0.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 protobuf==3.12.2
+pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.2.5/pt_core_news_sm-2.2.5.tar.gz
 ptyprocess==0.6.0
 pycryptodome==3.9.7
 pydeck==0.3.1
@@ -88,8 +93,9 @@ sortedcontainers==2.1.0
 soupsieve==2.0.1
 spacy==2.2.4
 SpeechRecognition==3.8.1
+sqlparse==0.3.1
 srsly==1.0.2
-streamlit==0.60.0
+streamlit==0.61.0
 terminado==0.8.3
 testpath==0.4.4
 textblob==0.15.3
@@ -99,7 +105,7 @@ tika==1.24
 toml==0.10.1
 toolz==0.10.0
 tornado==5.1.1
-tqdm==4.46.0
+tqdm==4.46.1
 traitlets==4.3.3
 typing-extensions==3.7.4.2
 tzlocal==2.1
@@ -107,7 +113,7 @@ urllib3==1.25.9
 validators==0.15.0
 wasabi==0.6.0
 watchdog==0.10.2
-wcwidth==0.2.0
+wcwidth==0.2.3
 webencodings==0.5.1
 widgetsnbextension==3.5.1
 xlrd==1.2.0
