--- a/Pipfile
+++ b/Pipfile
@@ -6,13 +6,17 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+bokeh = "==2.0.2"
+gtts = "==2.1.1"
+gtts-token = "==1.1.3"
+idna = "==2.9"
+image = "==1.5.32"
+pandas = "==1.0.4"
+pillow = "==7.1.2"
 streamlit = "*"
-bokeh = "*"
-gtts = "*"
 spacy = "*"
+textblob = "*"
 pt-core-news-sm = "*"
-image = "*"
-numpy = "*"
 
 [requires]
 python_version = "3.6"
